Fix position of the language switcher menu to remove UI overlap. (#402)
Fixes #401. Credit to @osmanzeki

--- a/assets/less/multilingual.less
+++ b/assets/less/multilingual.less
@@ -77,14 +77,14 @@
 
     &.field-multilingual-repeater {
         .ml-btn {
-            top: -10px;
-            right: 50px;
+            top: -27px;
+            right: 11px;
             text-align: right;
         }
 
         .ml-dropdown-menu {
-            top: 15px;
-            right: 38px;
+            top: 0;
+            right: 0;
         }
 
         &.is-empty {
